app/global.css
 *{
    font-family: Verdana, Tahoma, sans-serif;
 }

.logo {
 mix-blend-mode: multiply;
}

 body{
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-image: url("assets/background.avif.png");
 }

 main{
    width: 80vw;
    height: 80vh;
    background:linear-gradient(to bottom , #f8f8f8, #cfcfcf);
    border-radius: 15px;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: space-between;
    padding: 20px;
    color: #383838;
 }

 section{
    width: 100%;
 }

 section.populated{
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   overflow: scroll;
 }

 .starter-text{
   padding: 0 80px;
 }

 form{
   height: 65px;
   width: 100%;
   display: flex;
   border-top: #828282 solid 2px ;
   padding-top: 20px;
   border-radius: 0 0 10px 10px;
   overflow: hidden;
 }

 input.question-box{
   width: 85%;
   font-size: 15px;
   color: #383838;
   border: none;

 }

 input[type=submit]{
   width: 15%;
   padding: 10px;
   font-size: 15px;
   border: none;
   color: #fff;
   background-color: #4118d0;
 }
 input:focus{
   outline: none;
 }

